--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,4 @@
 /**LAYOUT, h1, h2**/
-html {
-  background-color: purple;
-}
 body {
   margin: 0;
   padding: 0;
@@ -22,19 +19,20 @@ header, footer {
 }
 
 section {
-  display: inline-block;
+  display: inline-flex;
   margin: 0;
   padding: 0;
   vertical-align: top;
 }
 
 section {
-  background-color: lightgray;
+  background-color: white;
   width: 79%;
 }
 h1, h2 {
-  text-align: left;
+  text-align: center;
   font-size: 40px;
+  width: 80%;
 }
 
 
@@ -50,8 +48,8 @@ nav ul {
 
 nav li {
   display: inline-grid;
-  margin-left: 10px;
   height: 100%;
+  border: 2px solid black;
 }
 
 nav a {
@@ -74,11 +72,27 @@ nav a:hover {
 /**ARTICLE-ALBUMS**/
 article {
   display:none;
+
 }
 article img {
   width: 300px;
   height: 300px;
   margin: 15px;
+  padding-bottom: 65px;
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: white;
+  margin: 5px;
+  border-bottom: 5px solid lightgray;
+  border-right: 5px solid lightgray;
+}
+
+article img:hover {
+  border-top: 1px solid #504A4B;
+  border-left: 1px solid #504A4B;
+  border-bottom: 5px solid #504A4B;
+  border-right: 5px solid #504A4B;
 }
 
 /**END ARTICLE-ALBUMS**/
@@ -88,15 +102,30 @@ article img {
 
 .home {
   display: none;
+
 }
 
 .home img {
+  display: inline-block;
   width: 300px;
   height: 300px;
+  padding-bottom: 65px;
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: white;
+  margin: 5px;
+
+  border-bottom: 5px solid lightgray;
+  border-right: 5px solid lightgray;
 }
-.home p {
-  display: inline-block;
+.home img:hover {
+  border-top: 1px solid #504A4B;
+  border-left: 1px solid #504A4B;
+  border-bottom: 5px solid #504A4B;
+  border-right: 5px solid #504A4B;
 }
+
 
 nav {
   display: none;
